<resources>
    <string name="app_name">DigiFarm</string>
    <string name="greet_msg">Welcome To DigiFarm</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="store_description">Welcome to Our DigiFarm (Digital Farmer)! Explore a wide range of fresh and quality Vegetables and Fruits to meet all your daily needs.</string>
    <string name="customer_support_mobile_number">Phone: +91 (123) 456-789</string>
    <string name="customer_support_email">Email: support@digifarm.com</string>
    <string name="address">Visit Us at</string>
    <string name="company_address">National Highway 06, Goverment Polytechnic,Jalgoan,425001</string>
    <string name="app_info">A digital way to buy and sell Vegetables...</string>
    <string name="warn">**This information is Generate by AI. It may Generate inaccurate information. Please Verfiy before Use any Solution**</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tc1">Welcome to DigiFarm. This App is provided as a service to our visitors and may be used for informational purposes only. Because the Terms and Conditions contain legal obligations, please read them carefully.</string>
    <string name="tc2">By using the Site web sites you agree to indemnify us and affiliated entities (collectively "Indemnities") and hold them harmless from any and all claims and expenses, including (without limitation) attorneys fees, arising from your use of the Site web sites, your use of the Products and Services, or your submission of ideas and/or related materials to us or from any persons use of any ID, membership or password you maintain with any portion of the Site, regardless of whether such use is authorized by you.</string>
    <string-array name="product_category">
        <item>Select Product Category</item>
        <item>Exotic Fruits</item>
        <item>Fruits</item>
        <item>Staple</item>
        <item>Vegetable</item>
        <item>Milk</item>
        <item>Flower</item>
        <!-- Add more items as needed -->
    </string-array>
</resources>