<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SupportActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg">

            <ImageView
                android:id="@+id/backbtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/back_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Support"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </Toolbar>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- ImageView -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/banner3"
            android:scaleType="centerCrop"
            android:contentDescription="sjh" />

        <!-- Description -->
        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/imageView"
            android:padding="16dp"
            android:text="@string/store_description"
            android:textSize="20sp"/>

        <!-- CardView for Customer Support -->
        <androidx.cardview.widget.CardView
            android:id="@+id/supportCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/descriptionTextView"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Customer Support Mobile Number -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/phone_solid"
                        android:layout_gravity="center_vertical"
                        />
                <TextView
                    android:id="@+id/mobileNumberTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_support_mobile_number"
                    android:layout_margin="10dp"
                    android:textSize="18sp"/>
                </LinearLayout>

                <!-- Customer Support Email -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/email_solid"/>
                <TextView
                    android:id="@+id/emailTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:text="@string/customer_support_email" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Company Address -->
        <ImageView
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iinfo"
            android:layout_below="@id/supportCardView"
            android:layout_marginTop="5dp"
            android:src="@drawable/circle_info_solid"/>
        <TextView
            android:id="@+id/addressView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iinfo"
            android:layout_below="@id/supportCardView"
            android:padding="5dp"
            android:textSize="20sp"
            android:text="@string/address" />
        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addressView"
            android:padding="16dp"
            android:text="@string/company_address" />


    </RelativeLayout>

</LinearLayout>
</ScrollView>